# wireless-plugin-openwrt

./: .gitignore  CMakeLists.txt  README.md
src/: common.h  operational.c  operational.h  transform_data.c  transform_data.h  version.h.in  wireless.c  wireless.h
yang/: router-wireless@2018-11-27.yang
